--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import Footer from "../components/footer.astro";
+import Header from "../components/header.astro";
 export interface Props {
   title: string;
 }
@@ -21,7 +23,9 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
+    <Header />
     <slot />
+    <Footer />
   </body>
 </html>
 <style is:global>
