--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,26 +1,31 @@
 ---
 import Layout from "../layouts/Layout.astro";
-
 import Banner from "../components/banner.astro";
 ---
 
 <Layout title="Free Games">
   <main>
-    <h1>Welcome to <span class="text-gradient">Free Games</span></h1>
+    <h1 class="center-title">
+      Welcome to <span class="text-gradient">Free Games</span>
+    </h1>
     <Banner />
   </main>
 </Layout>
 
 <style>
   main {
-    margin: auto;
     padding: 1.5rem;
-    max-width: 100%;
+    width: 100%;
+    height: 80vh;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
-  h1 {
+  .center-title {
     font-size: 3rem;
     font-weight: 800;
-    margin: 0;
   }
   .text-gradient {
     background-image: var(--accent-gradient);
