--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,12 +1,15 @@
+---
+---
+
 <div class="nav-container">
   <nav class="navbar">
     <div class="logo">
-      <h1 class="text-gradient">Free Games</h1>
+      <a href="/"><h1 class="text-gradient">Free Games</h1></a>
     </div>
     <div class="links">
-      <a href="">Juegos</a>
-      <a href="">otros Juegos</a>
-      <a href="">Juegos Extra</a>
+      <a href="/games/shooter">Shooter</a>
+      <a href="/games/MMORPG">Role-playing</a>
+      <a href="/games/cardgames">Card Game</a>
     </div>
   </nav>
 </div>
@@ -37,7 +40,7 @@
     justify-content: space-between;
     align-items: center;
   }
-  .links a {
+  a {
     text-decoration: none;
     color: antiquewhite;
   }
