--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -30,8 +30,10 @@ const { href, title, body, src } = Astro.props;
     display: flex;
     flex-direction: column;
     padding: 0.15rem;
-    background-color: white;
-    background-image: var(--accent-gradient);
+    background: rgba(255, 255, 255, 0.671);
+    /*box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);*/
+    backdrop-filter: blur(6px);
+    -webkit-backdrop-filter: blur(6px);
     background-size: 400%;
     border-radius: 0.5rem;
     transition: transform 0.6s;
