--- a/src/components/banner.astro
+++ b/src/components/banner.astro
@@ -3,7 +3,7 @@
     Encuentra los mejores juegos <span class="text-gradient">Gratuitos</span>
   </h2>
   <a href="/games">
-    <button class="btn">Explorar</button>
+    <button class="btn"><b>Explorar</b> es gratis!</button>
   </a>
 </div>
 
@@ -27,16 +27,16 @@
     background-position: 0%;
   }
   .btn {
-    width: 6rem;
-    height: 2rem;
+    width: 9rem;
+    height: 2.5rem;
     border: none;
-    background-color: skyblue;
-    color: #202020;
+    background-color: #4799eb;
+    color: #fafafa;
     border-radius: 8px;
     margin-top: 1.5rem;
   }
   .btn:hover {
-    background-color: rgb(2, 98, 136);
     color: antiquewhite;
+    background-image: linear-gradient(#4799eb, #4799eb 60%, #185a91);
   }
 </style>
