--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -47,6 +47,9 @@ const { title } = Astro.props;
     font-family: system-ui, sans-serif;
     background-color: #202020;
     color: antiquewhite;
+    background-image: url("/paladins.png");
+    background-size: contain;
+    background-repeat: repeat-y;
   }
   code {
     font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
@@ -55,7 +58,5 @@ const { title } = Astro.props;
   body {
     width: 100%;
     height: 100vh;
-    background-image: url("/paladins.png");
-    background-size: cover;
   }
 </style>
