--- a/src/pages/games.astro
+++ b/src/pages/games.astro
@@ -52,8 +52,8 @@ const filteredData = data.filter((item) => item.genre === "MMOARPG");
     margin: auto;
     max-width: 80%;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 15px;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 16px;
   }
 </style>
 <script></script>
