--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -48,7 +48,7 @@ const { title } = Astro.props;
     background-color: #202020;
     color: antiquewhite;
     background-image: url("/paladins.png");
-    background-size: contain;
+    background-size: cover;
     background-repeat: repeat-y;
   }
   code {
