--- a/src/pages/games/cardgames.astro
+++ b/src/pages/games/cardgames.astro
@@ -24,9 +24,10 @@ import Layout from "../../layouts/Layout.astro";
 <style>
   .card-container {
     margin: auto;
+    padding: 1.5rem;
     max-width: 80%;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 15px;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 16px;
   }
 </style>
