--- a/src/pages/games/MMORPG.astro
+++ b/src/pages/games/MMORPG.astro
@@ -25,8 +25,9 @@ import Layout from "../../layouts/Layout.astro";
   .card-container {
     margin: auto;
     max-width: 80%;
+    padding: 1.5rem;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 15px;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 16px;
   }
 </style>
