--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,8 @@
 ---
 import Footer from "../components/footer.astro";
+import Hamburger from "../components/hamburger.astro";
 import Header from "../components/header.astro";
+import Menu from "../components/menu.astro";
 export interface Props {
   title: string;
 }
@@ -23,6 +25,8 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
+    <Hamburger />
+    <Menu />
     <Header />
     <slot />
     <Footer />
