--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -60,3 +60,19 @@ import Banner from "../components/banner.astro";
     padding: 0;
   }
 </style>
+
+<script>
+  const hamburguer = document.getElementById("hamburguer");
+  const line1 = document.getElementById("line1");
+  const line2 = document.getElementById("line2");
+  const line3 = document.getElementById("line3");
+  const menu = document.getElementById("menu");
+  hamburguer.addEventListener("click", animatedMenu);
+
+  function animatedMenu() {
+    line1.classList.toggle("activeline1");
+    line2.classList.toggle("activeline2");
+    line3.classList.toggle("activeline3");
+    menu.classList.toggle("active_menu");
+  }
+</script>
