--- a/src/components/hamburger.astro
+++ b/src/components/hamburger.astro
@@ -1,39 +1,53 @@
 <div class="hamburger" id="hamburguer">
-  <span class="line1" id="line1"></span>
-  <span class="line2" id="line2"></span>
-  <span class="line3" id="line3"></span>
+  <img
+    src="/menu_icon.svg"
+    width="35px"
+    height="35px"
+    class="line1"
+    id="line1"
+  />
+
+  <img
+    src="./close_icon.svg"
+    width="35px"
+    height="35px"
+    class="line2"
+    id="line2"
+  />
 </div>
 
 <style>
   .hamburger {
     width: 2.5rem;
     height: 2.5rem;
-    margin-left: 3%;
+    position: fixed;
+    margin-left: 90%;
+    margin-top: 2%;
     cursor: pointer;
     z-index: 999;
   }
-
-  .hamburger span {
-    display: block;
-    width: 100%;
-    height: 5px;
-    background-color: red;
-    margin-top: 6px;
-    transform-origin: 0px 100px;
-    transition: all 0.3s;
-    border-radius: 20px;
+  .line1 {
+    color: antiquewhite;
+    filter: invert(100);
   }
-
   .activeline1 {
-    transform: rotate(45deg);
+    display: none;
   }
-
+  .line2 {
+    display: none;
+    filter: invert(100);
+  }
   .activeline2 {
-    opacity: 0;
-    margin-left: -30px;
+    display: block;
+    color: antiquewhite;
   }
 
   .activeline3 {
     transform: rotate(-45deg);
+  }
+  @media (min-width: 768px) {
+    .hamburger {
+      display: none;
+    }
   }
 </style>
