--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -51,4 +51,10 @@
     background-size: 400%;
     background-position: 0%;
   }
+
+  @media (max-width: 768px) {
+    .nav-container {
+      display: none;
+    }
+  }
 </style>
