Add alt atribute to img

--- a/src/components/hamburger.astro
+++ b/src/components/hamburger.astro
@@ -1,6 +1,7 @@
 <div class="hamburger" id="hamburguer">
   <img
     src="/menu_icon.svg"
+    alt="Menu Icon"
     width="35px"
     height="35px"
     class="line1"
@@ -9,6 +10,7 @@
 
   <img
     src="./close_icon.svg"
+    alt="Close Icon"
     width="35px"
     height="35px"
     class="line2"
