--- a/src/components/banner.astro
+++ b/src/components/banner.astro
@@ -31,7 +31,7 @@
     height: 2.5rem;
     border: none;
     background-color: #4799eb;
-    color: #fafafa;
+    color: #202020;
     border-radius: 8px;
     margin-top: 1.5rem;
   }
