fix menutext align

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,6 +16,7 @@ const { title } = Astro.props;
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <meta name="description" content="Sitio de Juegos Gratis Online" />
+    <meta name="description" content="Free online games website" />
     <meta
       name="description"
       content="Sitio realizado con fines didacticos con Astro"
