--- a/src/components/banner.astro
+++ b/src/components/banner.astro
@@ -39,4 +39,12 @@
     color: antiquewhite;
     background-image: linear-gradient(#4799eb, #4799eb 60%, #185a91);
   }
+  @media (max-width: 768px) {
+    .banner {
+      text-align: center;
+    }
+    h2 {
+      text-align: center;
+    }
+  }
 </style>
