--- a/src/components/banner.astro
+++ b/src/components/banner.astro
@@ -1,5 +1,5 @@
 <div class="banner">
-  <h2>
+  <h2 class="title">
     Encuentra los mejores juegos <span class="text-gradient">Gratuitos</span>
   </h2>
   <a href="/games">
@@ -16,7 +16,7 @@
     justify-content: center;
     align-items: center;
   }
-  h2 {
+  .title {
     color: antiquewhite;
   }
   .text-gradient {
@@ -43,8 +43,9 @@
     .banner {
       text-align: center;
     }
-    h2 {
+    .title {
       text-align: center;
+      font-size: 1.5rem;
     }
   }
 </style>
